# dj_web_dev

./: .env.example  .gitignore  CLAUDE.md  README.md  db.sqlite3  dj_web_dev.code-workspace  pyproject.toml  test_summary1.txt  test_summary2.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: index.html  post_detail.html  post_list.html
blog/tests/: conftest.py  factories.py  test_models.py  test_urls.py  test_views.py  tests-practices.md
challenges/: admin.py  urls.py  views.py
challenges/templates/challenges/: index.html
docs/: faq-dj-stub.md  tooling-quickstart.md
main/: context_processors.py  settings.py  urls.py
templates/: 404.html  base.html
